--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="@string/about_me" />
-    <item android:title="@string/contact" />
+    <item
+        android:id="@+id/nav_aboutme"
+        android:title="@string/about_me" />
+    <item
+        android:id="@+id/nav_contact"
+        android:title="@string/contact" />
 </menu>
