Add detail File Data

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="word_title">add_title</style>
+
+    <style name="add_title">add_title</style>
+
 </resources>
