--- a/app/src/main/res/layout/activity_new_add.xml
+++ b/app/src/main/res/layout/activity_new_add.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/big_padding"
         android:background="@color/colorPrimary"
-        android:text="@string/button_save"
+        android:text="@string/button_add"
         android:textColor="@color/colorAccent" />
 
 </LinearLayout>
