--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,13 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/mainActivity">
+    app:startDestination="@id/newAddActivity4">
 
-    <activity
-        android:id="@+id/mainActivity"
-        android:name="com.example.firstappagain.Fragment.MainActivity"
-        android:label="activity_main"
-        tools:layout="@layout/activity_main" />
     <fragment
         android:id="@+id/about"
         android:name="com.example.firstappagain.Fragment.AboutmeFragment"
@@ -20,4 +15,14 @@
         android:name="com.example.firstappagain.Fragment.ContactFragment"
         android:label="fragment_contact"
         tools:layout="@layout/fragment_contact" />
+    <fragment
+        android:id="@+id/titleFragment"
+        android:name="com.example.firstappagain.Fragment.TitleFragment"
+        android:label="TitleFragment"
+        tools:layout="@layout/fragment_title" />
+    <activity
+        android:id="@+id/newAddActivity4"
+        android:name="com.example.firstappagain.Fragment.NewAddActivity"
+        android:label="NewAddActivity"
+        tools:layout="@layout/activity_new_add"/>
 </navigation>
